user register complete

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,8 @@
 PORT = 5000
-MYSQL_USERNAME = 
-MYSQL_PASSWORD = 
+MYSQL_USERNAME = root
+MYSQL_PASSWORD = xxxx
+PROJECT_DATABASE = HealthAndWellnessManagement
+NODE_ENV = development
+JWT_SECRET = HealthAndWellnessManagement
+JWT_EXPIRE = 5d
+COOKIE_EXPIRE = 5
