--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "geoip-lite": "^1.4.10",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.10.0",
+    "node-cron": "^3.0.3",
     "postcss": "^8.4.38",
     "postcss-cli": "^11.0.0",
     "sequelize": "^6.37.3",
