twilio sendgrid integration complete

--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,5 @@ NODE_ENV = development
 JWT_SECRET = HealthAndWellnessManagement
 JWT_EXPIRE = 5d
 COOKIE_EXPIRE = 5
+TWILIO_SENDGRID_TOKEN = xxxx
+SENDER_EMAIL = harshalskahar389@gmail.com
