--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@sendgrid/mail": "^8.1.3",
     "autoprefixer": "^10.4.19",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.6",
