sending report using bullmq completed

--- a/.env.example
+++ b/.env.example
@@ -8,3 +8,6 @@ JWT_EXPIRE = 5d
 COOKIE_EXPIRE = 5
 TWILIO_SENDGRID_TOKEN = xxxx
 SENDER_EMAIL = harshalskahar389@gmail.com
+TWILIO_SENDGRID_TEMPLATE_ID = xxxx
+REDIS_URI=127.0.0.1
+REDIS_PORT=xxxx
