--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "@sendgrid/mail": "^8.1.3",
     "autoprefixer": "^10.4.19",
     "bcryptjs": "^2.4.3",
+    "bullmq": "^5.7.15",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
     "express": "^4.19.2",
     "geoip-lite": "^1.4.10",
+    "ioredis": "^5.4.1",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.10.0",
     "node-cron": "^3.0.3",
