--- a/.env.example
+++ b/.env.example
@@ -11,3 +11,7 @@ SENDER_EMAIL = harshalskahar389@gmail.com
 TWILIO_SENDGRID_TEMPLATE_ID = xxxx
 REDIS_URI=127.0.0.1
 REDIS_PORT=xxxx
+CLOUD_NAME = xxxx
+CLOUDINARY_API=xxxx
+CLOUDINARY_SECRET= xxxx
+CLOUDINARY_FOLDER = MedicationtTracker
