--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "postcss": "^8.4.38",
     "postcss-cli": "^11.0.0",
     "sequelize": "^6.37.3",
+    "socket.io": "^4.7.5",
     "sweetalert": "^2.1.2",
     "sweetalert2": "^11.11.0",
     "tailwindcss": "^3.4.3"
